changes swagger route
